--- a/request/CMakeLists.txt
+++ b/request/CMakeLists.txt
@@ -113,12 +113,16 @@ include_directories(
 add_executable(request src/requester.cpp)
 add_executable(bigBen src/bigBen.cpp)
 add_executable(hoaHakanaia src/hoaHakanaia.cpp)
+add_executable(plane src/plane.cpp)
+add_executable(plane_new src/plane_new.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
 add_dependencies(request koptplanner_generated_messages_cpp)
 add_dependencies(bigBen koptplanner_generated_messages_cpp)
 add_dependencies(hoaHakanaia koptplanner_generated_messages_cpp)
+add_dependencies(plane koptplanner_generated_messages_cpp)
+add_dependencies(plane_new koptplanner_generated_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(request
@@ -130,7 +134,12 @@ target_link_libraries(bigBen
 target_link_libraries(hoaHakanaia
   ${catkin_LIBRARIES}
 )
-
+target_link_libraries(plane
+  ${catkin_LIBRARIES}
+)
+target_link_libraries(plane_new
+  ${catkin_LIBRARIES}
+)
 #############
 ## Install ##
 #############
